# ndk-pkg-prefab-example-ffmpeg

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.c  app.h
app/src/main/java/com/fpliu/android/ndk/pkg/prefab/example/ffmpeg/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
